--- a/apps/app/index.html
+++ b/apps/app/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Vue Application</title>
         <link rel="icon" href="/favicon.ico" />
+        <link rel="stylesheet" href="/src/assets/main.css" />
     </head>
     <body>
         <div id="app"></div>
