--- a/apps/app/index.html
+++ b/apps/app/index.html
@@ -1,14 +1,33 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vue Application</title>
+        <meta name="description" content="Application de facturation BEG" />
+        <meta name="theme-color" content="#3B82F6" />
+        <title>BEG Facture</title>
         <link rel="icon" href="/favicon.ico" />
+        <link rel="manifest" href="/manifest.json" />
+        <link rel="apple-touch-icon" href="/icon-192.png" />
         <link rel="stylesheet" href="/src/assets/main.css" />
     </head>
     <body>
         <div id="app"></div>
         <script type="module" src="/src/main.ts"></script>
+        <script>
+            // Register service worker for PWA
+            if ("serviceWorker" in navigator) {
+                window.addEventListener("load", () => {
+                    navigator.serviceWorker
+                        .register("/service-worker.js")
+                        .then((registration) => {
+                            console.log("Service Worker registered:", registration)
+                        })
+                        .catch((error) => {
+                            console.log("Service Worker registration failed:", error)
+                        })
+                })
+            }
+        </script>
     </body>
 </html>
